# rig-control

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  partitions.csv  sdkconfig.defaults
html/: info.html  settings.html
main/: CMakeLists.txt  buffer.c  buffer.h  cat.c  cat.h  command_list.c  command_list.h  config.c  config.h  group.c  group.h  http.c  http.h  idf_component.yml  info.c  info.h  linked_list.c  linked_list.h  main.c  mem_chan.c  mem_chan.h  network.c  network.h  observer.c  observer.h  op_mode.c  op_mode.h  pins.h  rig.h  rig_commands.c  rig_commands.h  rig_controller.c  rig_controller.h  rig_monitor.c  rig_monitor.h  rig_uart.c  rig_uart.h  settings.c  settings.h  uart.c  (+9 more)
rig-monitor/: .gitignore  package-lock.json  package.json  vite.config.js
rig-monitor/src/: App.vue  main.js  op-modes-view.vue  router.js
rig-monitor/src/assets/: rig_menu.js  rig_settings.js
rig-monitor/src/components/: RigSettings.vue  WebSockets.vue  alc-meter.vue  alc-status.vue  all-menus.vue  all-settings.vue  command-list.vue  command-selector.vue  controls.vue  fm-settings.vue  frequency.vue  groups.vue  lock-status.vue  mi-level.vue  mode-dialogs.vue  mode-settings.vue  mode-status.vue  op-mode.vue  power-level.vue  pre-amp-status.vue  property-list.vue  radio-status.vue  read-meter-front-panel.vue  s-button.vue  s-level-toggle.vue  s-level.vue  s-meter-bootstrap-progressbar.vue  settings.vue  swr-meter.vue  tuner-status.vue  ui.vue
rig-monitor/src/js/: freq_utils.js  mem_chan.js  op_mode.js  rig_commands.js  rig_menu.js  rig_property.js  rig_setting.js  rig_settings.js  web_socket.js
rig-monitor/src/stores/: global.js  groups.js  mem_chans.js  menu.js  op_modes.js  settings.js  state.js
ui/: README.md  package-lock.json  vite.config.js
ui/src/: App.vue  main.js  router.js
(+81 files in other folders)
