idf_component_register(
	 SRCS 
	    "buffer.c"
	 	"cat.c"
		"command_list.c"
		"config.c"
		"group.c"
		"http.c"
		"info.c"
		"linked_list.c"
		"main.c"
		"mem_chan.c"
		"observer.c"
		"op_mode.c"
		"rig_commands.c"
		"rig_controller.c"
		"rig_monitor.c"
		"rig_uart.c"
		"settings.c"
		"ui.c"
		"wifi.c"
		"web_socket.c"
	PRIV_REQUIRES "dns_server" 
	PRIV_REQUIRES "esp_driver_uart"
	PRIV_REQUIRES "esp_http_server"
	PRIV_REQUIRES "esp_timer"
	PRIV_REQUIRES "esp_wifi"
	PRIV_REQUIRES "json"
	PRIV_REQUIRES "mbedtls"
	PRIV_REQUIRES "nvs_flash"
	INCLUDE_DIRS ".")
littlefs_create_partition_image(html ../ui/dist/ FLASH_IN_PROJECT)
